added game end to end play